--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.12.1",
+    "axios": "^0.21.1",
     "craco-less": "^1.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-sticky": "^6.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -20,6 +23,7 @@
     "test": "craco test",
     "eject": "react-scripts eject"
   },
+  "homepage":".",
   "eslintConfig": {
     "extends": [
       "react-app",
